--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
