--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.14.2",
     "gsap": "^3.13.0",
-    "next": "16.0.1",
+    "next": "^16.0.1",
     "next-sanity": "^11.6.5",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "sanity": "^4.14.2",
     "styled-components": "^6.1.19"
   },
